####################################################################
# The Falcon Programming language
#
# CMake configuration file for module oracle
####################################################################

FALCON_DEFINE_MODULE( MODULE oracle )

# Find Oracle
SET(ORACLE_INCLUDE_SEARCH_PATH
  ${ORACLE_INCLUDE_DIR}
  /usr/lib/oracle
)
FIND_PATH(ORACLE_REAL_INCLUDE_DIR occi.h ${ORACLE_INCLUDE_SEARCH_PATH})

# Find PgSQL Client Library
SET(ORACLE_LIB_SEARCH_PATH 
  ${ORACLE_LIB_DIR} 
  /usr/lib/oracle)
SET(ORACLE_LIB_NAMES libocci)
FIND_LIBRARY(ORACLE_LIBRARY
  NAMES ${ORACLE_LIB_NAMES}
  PATHS ${ORACLE_LIB_SEARCH_PATH}
)

IF (ORACLE_REAL_INCLUDE_DIR AND ORACLE_LIBRARY)
  INCLUDE_DIRECTORIES(BEFORE ${ORACLE_REAL_INCLUDE_DIR})
ELSE(ORACLE_REAL_INCLUDE_DIR AND ORACLE_LIBRARY)
  IF(NOT ORACLE_REAL_INCLUDE_DIR)
    MESSAGE(SEND_ERROR "Oracle include path was not found")
    MESSAGE(SEND_ERROR "Looked in: ${Oracle_INCLUDE_SEARCH_PATH}")
  ENDIF(NOT ORACLE_REAL_INCLUDE_DIR)
  IF(NOT ORACLE_LIBRARY)
    MESSAGE(SEND_ERROR "Oracle library was not found")
    MESSAGE(SEND_ERROR "Looked for: ${ORACLE_LIB_NAMES}")
    MESSAGE(SEND_ERROR "Looked in: ${ORACLE_LIB_SEARCH_PATH}")
  ENDIF(NOT ORACLE_LIBRARY)
  MESSAGE(FATAL_ERROR "Could not find Oracle, cannot continue")
ENDIF (ORACLE_REAL_INCLUDE_DIR AND ORACLE_LIBRARY)

MESSAGE(STATUS "Found occi.h in ${ORACLE_REAL_INCLUDE_DIR}")
MESSAGE(STATUS "Found Oracle client library, ${ORACLE_LIBRARY}")

# Inclusion settings
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(../include)

INCLUDE_DIRECTORIES(BEFORE "${FALCON_INC_PATH}")
LINK_DIRECTORIES("${FALCON_LIB_PATH}")

# Target
ADD_LIBRARY( ${MODULE} MODULE
   oracle.cpp
   oracle_ext.cpp
   oracle_srv.cpp
)

# Link
IF(MSVC)
  SET(ORACLE_OPT_LIBS wsock32)
  SET_TARGET_PROPERTIES(${MODULE}  PROPERTIES LINK_FLAGS "/NODEFAULTLIB:library")
ENDIF(MSVC)

TARGET_LINK_LIBRARIES( ${MODULE}  falcon_engine ${ORACLE_OPT_LIBS} ${ORACLE_LIBRARY})
FALCON_INSTALL_MODULE( ${MODULE}  )
